<resources>
    <string name="app_name">Cadastro</string>
    <string name="mascara_nome_completo">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="dados_pessoais">Dados pessoais</string>
    <string name="nome_completo">Nome completo</string>
    <string name="cpf">CPF</string>
    <string name="telefone_com_ddd">Telefone com DDD</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
</resources>
