<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_formulario_titulo_dados_pessoais"
            android:drawableLeft="@drawable/ic_formulario_titulo_dados_pessoais"
            android:drawablePadding="10dp"
            android:text="@string/dados_pessoais"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/formulario_cadastro_nome_completo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/nome_completo"
                android:digits="@string/mascara_nome_completo"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/formulario_cadastro_cpf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/formulario_cadastro_nome_completo"
            app:layout_constraintStart_toStartOf="@+id/formulario_cadastro_nome_completo"
            app:layout_constraintTop_toBottomOf="@+id/formulario_cadastro_nome_completo">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/cpf" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/formulario_cadastro_telefone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/formulario_cadastro_cpf"
            app:layout_constraintStart_toStartOf="@+id/formulario_cadastro_cpf"
            app:layout_constraintTop_toBottomOf="@+id/formulario_cadastro_cpf">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/telefone_com_ddd" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/formulario_cadastro_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/formulario_cadastro_telefone"
            app:layout_constraintStart_toStartOf="@+id/formulario_cadastro_telefone"
            app:layout_constraintTop_toBottomOf="@+id/formulario_cadastro_telefone">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/e_mail" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/formulario_cadastro_senha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/formulario_cadastro_email"
            app:layout_constraintStart_toStartOf="@+id/formulario_cadastro_email"
            app:layout_constraintTop_toBottomOf="@+id/formulario_cadastro_email">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/senha" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/formulario_cadastro_botao_cadastrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cadastrar"
            app:layout_constraintEnd_toEndOf="@id/formulario_cadastro_senha"
            app:layout_constraintStart_toStartOf="@id/formulario_cadastro_senha"
            app:layout_constraintTop_toBottomOf="@id/formulario_cadastro_senha" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>